fix: Visual Studio solution file (.sln) ve ProjectGuid eklendi

--- a/gateway/BiSoyle.Gateway.csproj
+++ b/gateway/BiSoyle.Gateway.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ProjectGuid>{A1B2C3D4-E5F6-4A5B-8C7D-9E0F1A2B3C4D}</ProjectGuid>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +13,7 @@
   </ItemGroup>
 
 </Project>
+
 
 
 
