--- a/services/product-service/BiSoyle.Product.Service.csproj
+++ b/services/product-service/BiSoyle.Product.Service.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ProjectGuid>{C3D4E5F6-A7B8-4C5D-9E0F-1A2B3C4D5E6F}</ProjectGuid>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +12,7 @@
   </ItemGroup>
 
 </Project>
+
 
 
 
