--- a/services/transaction-service/BiSoyle.Transaction.Service.csproj
+++ b/services/transaction-service/BiSoyle.Transaction.Service.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ProjectGuid>{D4E5F6A7-B8C9-4D5E-0F1A-2B3C4D5E6F7A}</ProjectGuid>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +12,7 @@
   </ItemGroup>
 
 </Project>
+
 
 
 
