refactor: Temiz proje yapÄ±sÄ± ve README gÃ¼ncellemesi

--- a/.gitignore
+++ b/.gitignore
@@ -1,119 +1,41 @@
-# Visual Studio / Rider
-*.user
-*.suo
-*.userosscache
-*.sln.docstates
-*.userprefs
-
-# Build results
+## .NET Core
+bin/
+obj/
 [Dd]ebug/
 [Rr]elease/
-x64/
-build/
-bld/
-[Bb]in/
-[Oo]bj/
-
-# Visual Studio cache/options
-.vs/
-
-# NuGet Packages
-*.nupkg
-**/packages/*
-!**/packages/build/
-
-# ASP.NET Scaffolding
-ScaffoldingReadMe.txt
-
-# Files built by Visual Studio
-*_i.c
-*_p.c
-*_h.h
-*.ilk
-*.meta
-*.obj
-*.iobj
-*.pch
+*.user
+*.suo
+*.cache
+*.dll
+*.exe
 *.pdb
-*.ipdb
-*.pgc
-*.pgd
-*.rsp
-*.sbr
-*.tlb
-*.tli
-*.tlh
-*.tmp
-*.tmp_proj
-*_wpftmp.csproj
+
+## Logs
 *.log
-*.vspscc
-*.vssscc
-.builds
-*.pidb
-*.svclog
-*.scc
+logs/
 
-# Visual C++ cache files
-ipch/
-*.aps
-*.ncb
-*.opendb
-*.opensdf
-*.sdf
-*.cachefile
-*.VC.db
-*.VC.VC.opendb
+## VS Code
+.vscode/
 
-# Visual Studio profiler
-*.psess
-*.vsp
-*.vspx
-*.sap
-
-# TypeScript
-*.tsbuildinfo
-
-# Node
+## Angular
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Angular
-dist/
 .angular/
 
-# Python
+## Python
 __pycache__/
 *.py[cod]
 *$py.class
-.venv/
-env/
+*.so
+.env
+.venv
 venv/
 
-# Logs
-*.log
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*.swn
-
-# OS
+## OS
 .DS_Store
 Thumbs.db
-desktop.ini
 
-# Database
-*.db
-*.sqlite
-*.sql
-
-# Secrets
-appsettings.Development.json
-appsettings.Local.json
-*.secret
-
+## Docker
+docker-compose.override.yml
