fix: Add Port 5433 to all service connection strings

--- a/services/receipt-service/appsettings.Development.json
+++ b/services/receipt-service/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=bisoyle_receipt;Username=postgres;Password=postgres123"
+    "DefaultConnection": "Host=localhost;Port=5433;Database=bisoyle_receipt;Username=postgres;Password=postgres123"
   }
 }
 
