--- a/services/tenant-service/appsettings.Development.json
+++ b/services/tenant-service/appsettings.Development.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Information",
       "Microsoft.EntityFrameworkCore": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5433;Database=bisoyle_tenant;Username=postgres;Password=postgres123"
   }
 }
 
